Version 2.1.1 (2007-xx-xx)
	Added new forced_root_block option. Forces inline elements or text nodes into block elements.
	Added new fullpage_hide_in_source_view option to fullpage plugin.
	Cleaned up the source code by removing some obsolete code.
	Removed debug option, no longer needed since the devkit does it better.
	Removed old IE 5.0 code and reduced the overall code by using smarter prototype add methods.
	Fixed bug with numeric entity encoding not converting the first character in string.
	Fixed bug with new color picker not closing correctly some times.
	Fixed bug where FF was auto generating BR elements at the end of LI elements.
	Fixed bug where more colors link failed if the page had a base element in page.
	Fixed bug where link dialog produced error when importing CSS classes.
	Fixed bug where link dialog produced error when importing CSS classes.
	Fixed bug where fullpage plugin inserted extra > at the end of doctype.
	Fixed bug where fullpage plugin didn't remove internal mce_src/mce_href items correctly.
	Fixed bug where fullpage plugin height was incorrect on Linux.
	Fixed bug where media plugin did a incorrect comparation of width/height.
	Fixed bug with pressing return/enter inside a paragraph in a non IE browser.
	Fixed bug with autoplay option for QT not being enabled by default in the media plugin.
	Fixed so the width/height fields of the advanced themes image dialogs can take more that 3 characters.
	Fixed so store/restore selection logic works in Opera and Safari (Nightly).
	Fixed so the remove column/row icons are more clear in the table plugin. Contributed by Ferenc Veres.
	Fixed so both title and alt attributes of buttons are set. Contributed by BigBrownChunx.
	Fixed problem with source editor using mono instead of monospace as a font family.
	Fixed problem with Opera detection, it now detects Opera even if it spoofs another browser.
	Fixed problem where TinyMCE failed to initialized if used together with libraries like Scriptaculous.