@@ -5,7 +5,7 @@ title : 'Insert / edit embedded media',
 desc : 'Insert / edit embedded media',
 general : 'General',
 advanced : 'Advanced',
-file : 'File',
+file : 'File/URL',
 list : 'List',
 size : 'Dimensions',
 preview : 'Preview',
